# ansible-collection-mac

./: .ansible-lint.yml  .checkov.yaml  .env.test  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.disabled  .yamlfmt.yml  .yamllint.yml  CHANGELOG.md  LICENSE  MOLECULE.md  Makefile  README.md  cleanup-report-2025-10-16.md  docker-compose.test.yml  galaxy.yml  pyproject.toml  requirements-dev.txt  requirements.yml
.devcontainer/: codespaces.json  devcontainer.json  setup.sh  test.sh  validate.sh
.github/: codespaces.md
.github/workflows/: molecule.yml  quality.yml  security.yml  test-macos-docker.yml  test-macos-quick.yml
docs/: QUALITY_AUTOMATION_GUIDE.md  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  macos-docker-testing.md  modules.rst  plugins.rst  roles.rst  usage.rst
meta/: runtime.yml
roles/tailscale/: README.md
roles/tailscale/defaults/: main.yml
roles/tailscale/handlers/: main.yml
roles/tailscale/meta/: main.yml
roles/tailscale/molecule/default/: converge.yml  destroy.yml  molecule.yml  prepare.yml  requirements.yml  verify.yml
roles/tailscale/tasks/: cleanup.yml  configure.yml  install.yml  main.yml  prerequisites.yml  remove.yml  service.yml  verify.yml
roles/tailscale/templates/: com.tailscale.tailscaled.plist.j2
roles/tailscale/vars/: main.yml
scripts/: README.md  analyze-test-logs.py  capture-screenshot.sh  check-macos-status.sh  cleanup-macos.sh  collect-test-logs.sh  monitor-test-progress.sh  quality-metrics.py  setup-dev.sh  start-macos-container.sh  stop-macos-container.sh  test.sh
scripts/common/: utils.sh
tests/molecule/macos/: converge.yml  molecule.yml  prepare.yml  verify.yml
tests/molecule/macos-config-matrix/: molecule.yml
tests/molecule/macos-config-matrix/playbooks/: config-matrix.yml  test_config.yml
tests/molecule/macos-error-scenarios/: molecule.yml
tests/molecule/macos-installation-binary/: molecule.yml
tests/molecule/macos-installation-binary/playbooks/: installation-binary.yml
tests/molecule/macos-installation-go/: molecule.yml
tests/molecule/macos-installation-homebrew/: molecule.yml
tests/molecule/macos-installation-homebrew/playbooks/: installation-homebrew.yml
tests/molecule/macos-network-config/: molecule.yml
tests/molecule/macos/playbooks/: error-scenarios.yml  installation-binary.yml  installation-go.yml  installation-homebrew.yml  network-configuration.yml
tests/molecule/macos/plugins/: collect_logs.py
tests/molecule/tailscale/: converge.yml  destroy.yml  molecule.yml  prepare.yml  requirements.yml  verify.yml
